JSheets/styles.css
body {
	text-align:center;
	background-color:#333;
	font-family:Arial;
	padding:10px;
	color:cyan;
}
* {
	margin:0;
	padding:0;
}
table {
	border-collapse:collapse;
	margin:auto;
}
td {
	border:1px solid black;
	max-width:100px;
	width:100px;
	height:20px;
	padding:2px;
	overflow: hidden;
    text-overflow:clip;
    white-space: nowrap;
}
.colors {
	background-color:white;
	width:50px;
	height:40px;
	font-weight:bold;
	display:inline-block;
}
.colors input {
	width:48px;
	border-style:none;
	background-color:white;
}
.colors img {
	display:block;
	margin:auto;
}
.colors p {
	color:black;
}
#a {
	display:none;
}

